--- a/functions/package.json
+++ b/functions/package.json
@@ -2,11 +2,11 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy": "npm run setenv && firebase deploy --only functions",
+    "setenv": "firebase functions:config:unset env && firebase functions:config:set env=\"$(cat env.json)\"",
     "logs": "firebase functions:log"
   },
   "engines": {
@@ -18,8 +18,6 @@
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
-    "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
